force-app/main/default/objects/Examination_Outcome__c/Examination_Outcome__c.object-meta.xml
<CustomObject>
    <label>Examination Outcome</label>
    <nameField>
        <displayFormat>EO-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Examination Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>