force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_1st_Examiner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st report received examiner name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Examination Outcomes (1st Examiner)</relationshipLabel>
    <relationshipName>Examination_Outcomes_1st_Examiner</relationshipName>
    <type>Lookup</type>
</CustomField>