force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_1st_Examiner_mark__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_mark__c</fullName>
    <inlineHelpText>Score out of 100, only required for graded Masters by research degrees</inlineHelpText>
    <label>1st report received mark</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>