force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_1st_Examiner_Other_Requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Other_Requirements__c</fullName>
    <inlineHelpText>Used to capture any additional examination requirements e.g. for some joint degrees</inlineHelpText>
    <label>1st report received other requirements</label>
    <type>TextArea</type>
</CustomField>