force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_1st_Examiner_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_1st_Examiner_Outcome__c</fullName>
    <label>1st report received outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass with no amendments</fullName>
            </value>
            <value>
                <fullName>Pass with minor amendments</fullName>
            </value>
            <value>
                <fullName>Pass with major amendments</fullName>
            </value>
            <value>
                <fullName>Deferral – no alternate recommended</fullName>
            </value>
            <value>
                <fullName>Deferral – masters standard</fullName>
            </value>
            <value>
                <fullName>Pass after re-examination</fullName>
            </value>
            <value>
                <fullName>Do not award doctorate - masters standard</fullName>
            </value>
            <value>
                <fullName>Do not award the degree (fail)</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>