force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_2nd_Examiner_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>I_RS_2nd_Examiner_Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd report received examiner name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Examination Outcomes (2nd Examiner)</relationshipLabel>
    <relationshipName>Examination_Outcomes_2nd_Examiner</relationshipName>
    <type>Lookup</type>
</CustomField>