force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_3rd_Examiner__c.field-meta.xml
<CustomField>
    <fullName>I_RS_3rd_Examiner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd report received examiner name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Examination Outcomes (3rd Examiner)</relationshipLabel>
    <relationshipName>Examination_Outcomes_3rd_Examiner</relationshipName>
    <type>Lookup</type>
</CustomField>