force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_3rd_Examiner_Nancy_Millis_Recommend__c.field-meta.xml
<CustomField>
    <fullName>I_RS_3rd_Examiner_Nancy_Millis_Recommend__c</fullName>
    <label>3rd received Nancy Millis recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>