force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Advisory_Panel_Communications_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Advisory_Panel_Communications_Date__c</fullName>
    <label>Advisory Panel Meeting Date</label>
    <type>Date</type>
</CustomField>