force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Advisory_Panel_Mark__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Advisory_Panel_Mark__c</fullName>
    <inlineHelpText>Required where recommending a masters be awarded instead of a PhD</inlineHelpText>
    <label>Advisory Panel Mark</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>