force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Appeal_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Appeal_Outcome__c</fullName>
    <label>Appeal Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>