force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Appeal_Outcome_Accepted__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Appeal_Outcome_Accepted__c</fullName>
    <inlineHelpText>Indicate if the candidate has accepted the appeal outcome or not. If they are going to take their appeal further, note in the outcome comments</inlineHelpText>
    <label>Outcome Accepted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>