force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Appeal_Proceeding_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Appeal_Proceeding_Notes__c</fullName>
    <inlineHelpText>Most of the appeal proceeding notes are stored out of system by the Senior Policy &amp; Governance Coordinator. These notes are for use by the Operations Manager and Operations Team.</inlineHelpText>
    <label>Appeal Proceeding Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>