force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_BGR_result__c.field-meta.xml
<CustomField>
    <fullName>I_RS_BGR_result__c</fullName>
    <label>BGR result</label>
    <type>TextArea</type>
</CustomField>