force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Date_appeal_outcome_communicated__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_appeal_outcome_communicated__c</fullName>
    <label>Date Appeal Outcome Communicated</label>
    <type>Date</type>
</CustomField>