force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Date_appeal_received__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_appeal_received__c</fullName>
    <label>Date appeal received</label>
    <type>Date</type>
</CustomField>