force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Date_outcome_comm_to_candidate__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_outcome_comm_to_candidate__c</fullName>
    <label>Date outcome communicated to candidate</label>
    <type>Date</type>
</CustomField>