force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Date_reports_sent_to_SDGR__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_reports_sent_to_SDGR__c</fullName>
    <label>Date reports sent to SDGR</label>
    <type>Date</type>
</CustomField>