force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Fee_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Fee_Sanctions__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Sanctions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Sanction</label>
    <type>Checkbox</type>
</CustomField>