force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Field_of_Research__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Field_of_Research__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Field_of_Research_ShortText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field of Research</label>
    <type>Text</type>
</CustomField>