force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Graduate_Research_Examination__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Graduate_Research_Examination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graduate Research Examination ID</label>
    <referenceTo>Graduate_Research_Examination__c</referenceTo>
    <relationshipLabel>Examination Outcomes</relationshipLabel>
    <relationshipName>Examination_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>