force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_GRS_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_GRS_Notes__c</fullName>
    <label>GRS Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>