force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Research_Advisory_Panel_outcome__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Advisory_Panel_outcome__c</fullName>
    <label>Advisory Panel Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revise and resubmit</fullName>
            </value>
            <value>
                <fullName>Doctorate not awarded, award Masters</fullName>
            </value>
            <value>
                <fullName>No degree awarded (fail)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>