force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_SDGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Approver__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_SDGR_Approver__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Normally the SDGR for the candidate’s school, unless they have a conflict, in which case will usually be the Head of School</inlineHelpText>
    <label>SDGR Approver</label>
    <type>Text</type>
</CustomField>