force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_SDGR_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Comments__c</fullName>
    <label>SDGR Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>