force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_SDGR_Nancy_Millis_justification__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Nancy_Millis_justification__c</fullName>
    <inlineHelpText>If you are nominating the candidate for the Nancy Millis Medal, please provide reasons based on the examiner comments and the Nancy Millis Medal criteria</inlineHelpText>
    <label>SDGR Nancy Millis justification</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>