force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_SDGR_Nancy_Millis_recommendation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Nancy_Millis_recommendation__c</fullName>
    <inlineHelpText>For PhD only. Based on the examiner reports, do you recommend the candidate for the Nancy Millis medal?</inlineHelpText>
    <label>SDGR Nancy Millis recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>