force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_SDGR_other_requirements__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_other_requirements__c</fullName>
    <inlineHelpText>Used to capture any additional examination requirements e.g. for some joint degrees</inlineHelpText>
    <label>SDGR other requirements</label>
    <type>TextArea</type>
</CustomField>