force-app/main/default/objects/Examination_Outcome__c/fields/I_rs_SDGR_recommended_exam_Outcome__c.field-meta.xml
<CustomField>
    <fullName>I_rs_SDGR_recommended_exam_Outcome__c</fullName>
    <inlineHelpText>Refer to Graduate Research Examinations Policy.</inlineHelpText>
    <label>SDGR recommended exam outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass with no amendments</fullName>
            </value>
            <value>
                <fullName>Pass with minor amendments</fullName>
            </value>
            <value>
                <fullName>Pass with major amendments</fullName>
            </value>
            <value>
                <fullName>Advisory panel</fullName>
            </value>
            <value>
                <fullName>Pass after re-examination</fullName>
            </value>
            <value>
                <fullName>Do not award the degree (fail) after re-examination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>