force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Confirmed by Operations Manager</fullName>
                <label>Sent to GRS Manager</label>
            </value>
            <value>
                <fullName>SDGR Determination</fullName>
            </value>
            <value>
                <fullName>GRS Processing</fullName>
            </value>
            <value>
                <fullName>Graduate Research Advisory Panel</fullName>
            </value>
            <value>
                <fullName>Chair BGR</fullName>
            </value>
            <value>
                <fullName>Revision Plan</fullName>
            </value>
            <value>
                <fullName>Communicate outcome</fullName>
            </value>
            <value>
                <fullName>Appeal in Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>