force-app/main/default/objects/Examination_Outcome__c/fields/I_RS_Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Approver__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Supervisor_Approver__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of the supervisor acting as the approver for examinations forms, normally the principal supervisor unless unavailable</inlineHelpText>
    <label>Supervisor Approver</label>
    <type>Text</type>
</CustomField>