force-app/main/default/objects/Examination_Outcome__c/validationRules/Limit_Researcher_changes_to_Status_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Researcher_changes_to_Status_field</fullName>
    <active>true</active>
    <description>Researcher users are only able to change the Status to a select few options</description>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &quot;1&quot; 
&amp;&amp; ISCHANGED(I_RS_Status__c) &amp;&amp;
TEXT(PRIORVALUE(I_RS_Status__c)) = &apos;SDGR Determination&apos; &amp;&amp;
TEXT(I_RS_Status__c) &lt;&gt; &quot;GRS Processing&quot;</errorConditionFormula>
    <errorMessage>You do not have permission to change to this status. Please contact GRS.</errorMessage>
</ValidationRule>