force-app/main/default/objects/Examination_Outcome__c/validationRules/Lock_Record_for_Researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_for_Researchers</fullName>
    <active>true</active>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &quot;1&quot; &amp;&amp;
TEXT(PRIORVALUE(I_RS_Status__c)) &lt;&gt; &quot;SDGR Determination&quot;</errorConditionFormula>
    <errorMessage>The record is not editable at this stage.</errorMessage>
</ValidationRule>