force-app/main/default/objects/Examination_Outcome__c/validationRules/Mark_0_to_100_1st_exam.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_0_to_100_1st_exam</fullName>
    <active>true</active>
    <errorConditionFormula>I_RS_1st_Examiner_mark__c &lt; 0 ||
I_RS_1st_Examiner_mark__c &gt; 100</errorConditionFormula>
    <errorDisplayField>I_RS_1st_Examiner_mark__c</errorDisplayField>
    <errorMessage>Mark must be between 0-100</errorMessage>
</ValidationRule>