force-app/main/default/objects/Examination_Outcome__c/validationRules/Parent_GRE_Must_Provide_SDGR_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_GRE_Must_Provide_SDGR_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(I_RS_Graduate_Research_Examination__r.I_RS_SDGR_Approver_User_Id__c)</errorConditionFormula>
    <errorMessage>This record cannot be created as the Graduate Research Examination is missing a required approver. Please contact exams.grs@latrobe.edu.au to resolve.</errorMessage>
</ValidationRule>